adjusts z-index of doodle bug to prevent covering of links

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -197,9 +197,11 @@ h1{
       round; 
   }
 
-  /*
-  media queries
-  */
+  svg {
+    z-index: -1;
+  }
+
+  /*  media queries  */
   @media screen and (max-width: 375px) {
   .Bug {
     width: 300px;
